# an-essay-concerning-llm-understanding

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: scaling-result.yml
benchmarks/: README.md  scaling.py
docs/: ABSTRACTION_READINESS.md  CI.md  CONFIGURATION.md  DATA_MODEL.md  ONTOLOGIES.md  SCHEMA_DISCOVERY.md  SOLUTIONS_evaluation_build_a_realwo.md
ontologies/: company.example.json  philosophy.example.json
research/: PERSPECTIVE_PRESERVATION_BENCHMARK.md  README.md  SCALING_STUDY.md
research/results/: architecture-comparison-cases.csv  architecture-comparison-summary.json  open-package-scaling-smoke-100.json  reliability-observation.json
src/essay_understanding/: __init__.py  api.py  cli.py  config.py  documents.py  engine.py  models.py  processing.py  protocols.py  repository.py  runtime.py  vector_store.py
src/essay_understanding/providers/: __init__.py  embeddings.py  generation.py
tests/: test_core.py
