[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "an-essay-concerning-llm-understanding"
version = "0.2.0"
description = "An embedding-provider-pluggable multi-layer vector store with extensible domain ontologies and learned retrieval shortcuts."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [{name = "Sean"}]
keywords = ["rag", "multi-layer-vector-store", "semantic-memory", "vector-search", "knowledge-graph", "domain-ontology", "procedural-memory", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "numpy>=1.26,<3",
  "pydantic>=2.10,<3",
  "python-dotenv>=1,<2",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
sentence-transformers = ["sentence-transformers>=5,<6"]
qdrant = ["qdrant-client>=1.15,<2"]
documents = ["docling>=2,<3"]
dev = ["pytest>=8,<9"]
all = [
  "sentence-transformers>=5,<6",
  "qdrant-client>=1.15,<2",
  "docling>=2,<3",
]

[project.scripts]
essay-understanding = "essay_understanding.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/essay_understanding"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
